---------------------------------------------------------------------------------------------------
Version: 1.2.8
Date: 17 January 2021
  Features:
    - New 'Tips & Tricks' simulation
    - French localisation (thanks sephrat!)
  Bugfixes:
    - Fixed passenger (player 2) being teleported back into spidertron after reactivation
---------------------------------------------------------------------------------------------------
Version: 1.2.7
Date: 17 January 2021
  Compatibility:
    - Fixed spidertron getting stuck on top of a companion drone from Companion Drones
  Bugfixes:
    - Fixed other players being able to get in a travelling spidertron
---------------------------------------------------------------------------------------------------
Version: 1.2.6
Date: 14 January 2021
  Changes:
    - Setting for using 'U' to enter/exit vehicles from spidertron now defaults to off because 1.1.9 makes exiting spidertrons with 'Enter' much more reliable
  Bugfixes:
    - Fixed player getting stuck in an entity (eg rocket silo or train carriage) after using 'U' to toggle spidertron
    - Fixed spidertron on vehicle being rendered on the same layer as alt-mode icons causing inconsistent visibility and flickering
    - Fixed spidertron name being lost when entering vehicles
    - Fixed being able to leave spidertron in vehicle when "Enter/exit vehicles from spidertron with standard control 'Enter'" setting is off
---------------------------------------------------------------------------------------------------
Version: 1.2.5
Date: 10 January 2021
  Changes:
    - Improved setting and control descriptions
  Bugfixes:
    - Fixed spidertron being created in the wrong place when exiting a vehicle by pressing 'Enter'
    - Fixed smoke appearing in the wrong place when entering vehicle from spidertron by pressing 'Enter'
  Compatibility:
    - Fixed compatibility with Spidertron Weapon Switcher